// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WIDTHS COMPONENT NATIVE 300 1`] = `
<WidthsProvider>
  <ReactAny
    actWidths={
      Object {
        "mobileWidth": true,
      }
    }
    style={
      Object {
        "backgroundColor": "blue",
      }
    }
    trace={
      Object {
        "backgroundColor": "blue /*TestComponent.sheet.root/$widths.-640*/",
      }
    }
  >
    MOBILE
  </ReactAny>
</WidthsProvider>
`;

exports[`WIDTHS COMPONENT NATIVE 800 1`] = `
<WidthsProvider>
  <ReactAny
    actWidths={
      Object {
        "tabletWidth": true,
      }
    }
    style={
      Object {
        "backgroundColor": "green",
      }
    }
    trace={
      Object {
        "backgroundColor": "green /*TestComponent.sheet.root/$widths.640-1024*/",
      }
    }
  >
    TABLET
  </ReactAny>
</WidthsProvider>
`;

exports[`WIDTHS COMPONENT NATIVE 1200 1`] = `
<WidthsProvider>
  <ReactAny
    actWidths={
      Object {
        "desktopWidth": true,
      }
    }
    style={
      Object {
        "backgroundColor": "red",
      }
    }
    trace={
      Object {
        "backgroundColor": "red /*TestComponent.sheet.root/$widths.1024-*/",
      }
    }
  >
    DESKTOP
  </ReactAny>
</WidthsProvider>
`;

exports[`WIDTHS COMPONENT WEB 300 1`] = `
<WidthsProvider>
  <ReactAny
    actWidths={
      Object {
        "mobileWidth": true,
      }
    }
    className="c b a"
    trace={
      Array [
        "@media (min-width: 1024px).c { background-color:red /*TestComponent.sheet.root/$widths.1024-*/ }",
        "@media (min-width: 640px) and (max-width: 1023px).b { background-color:green /*TestComponent.sheet.root/$widths.640-1024*/ }",
        "@media (max-width: 639px).a { background-color:blue /*TestComponent.sheet.root/$widths.-640*/ }",
      ]
    }
  >
    MOBILE
  </ReactAny>
</WidthsProvider>
`;

exports[`WIDTHS COMPONENT WEB 800 1`] = `
<WidthsProvider>
  <ReactAny
    actWidths={
      Object {
        "tabletWidth": true,
      }
    }
    className="c b a"
    trace={
      Array [
        "@media (min-width: 1024px).c { background-color:red /*TestComponent.sheet.root/$widths.1024-*/ }",
        "@media (min-width: 640px) and (max-width: 1023px).b { background-color:green /*TestComponent.sheet.root/$widths.640-1024*/ }",
        "@media (max-width: 639px).a { background-color:blue /*TestComponent.sheet.root/$widths.-640*/ }",
      ]
    }
  >
    TABLET
  </ReactAny>
</WidthsProvider>
`;

exports[`WIDTHS COMPONENT WEB 1200 1`] = `
<WidthsProvider>
  <ReactAny
    actWidths={
      Object {
        "desktopWidth": true,
      }
    }
    className="c b a"
    trace={
      Array [
        "@media (min-width: 1024px).c { background-color:red /*TestComponent.sheet.root/$widths.1024-*/ }",
        "@media (min-width: 640px) and (max-width: 1023px).b { background-color:green /*TestComponent.sheet.root/$widths.640-1024*/ }",
        "@media (max-width: 639px).a { background-color:blue /*TestComponent.sheet.root/$widths.-640*/ }",
      ]
    }
  >
    DESKTOP
  </ReactAny>
</WidthsProvider>
`;
